# ScuffedMinecraft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
assets/shaders/: billboard_vert.glsl  block_outline_frag.glsl  block_outline_vert.glsl  chunk_compute.glsl  crosshair_frag.glsl  crosshair_vert.glsl  framebuffer_frag.glsl  main_vert.glsl  water_vert.glsl
src/: Application.cpp  Bitset.h  Block.cpp  Block.h  Blocks.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkData.cpp  ChunkData.h  ChunkPos.cpp  ChunkPos.h  ChunkPosHash.h  ChunkRenderer.h  Physics.cpp  Physics.h  Planet.cpp  Planet.h  Shader.cpp  Shader.h  Vertex.h  WorldGen.cpp  WorldGen.h
src/glad/: glad.c  glad.h
src/graphics/: Buffer.h  Framebuffer.h  Misc.h  NVCommandList.h  Shader.cpp  Shader.h  Texture.h  VertexArrayObject.h
src/imgui/: imgui_impl_opengl3.cpp
